# ayunis-core-backend/src/admin/presenters/http/dtos/update-language-model.dto.ts
@@ -21,6 +21,9 @@ export class UpdateLanguageModelDto {
   canUseTools: boolean;
 
   @IsBoolean()
+  canVision: boolean;
+
+  @IsBoolean()
   isReasoning: boolean;
 
   @IsBoolean()
